--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose-paginate-v2": "^1.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "generate-gitignore": "^0.1.2",
-    "mongoose": "^6.4.3",
+    "mongoose": "^6.4.6",
+    "mongoose-paginate-v2": "^1.7.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.0.1"
+    "@types/node": "^18.0.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
